ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
     - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grpc-backend
                port:
                  number: 9000
